--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "@vercel/analytics": "^1.1.0",
     "antd": "^5.7.0",
     "auth0-js": "^9.22.1",
     "axios": "^1.4.0",
